--- a/Pipfile
+++ b/Pipfile
@@ -12,11 +12,13 @@ pylint = "*"
 [packages]
 requests = ">=2.20.0"
 biopython = "*"
-"urllib3" = ">=1.23"
-notebook = ">=5.7.2"
+urllib3 = ">=1.24.2"
+notebook = ">=5.7.8"
 isodate = "*"
 nbmerge = "*"
 jupyter = "*"
+jinja2 = ">=2.10.1"
+bleach = ">=3.1.4"
 
 [requires]
 python_version = "3.7"
